@@ -1,3 +1,6 @@
+"""Convenience interfaces between the hepnames LaTeX package and pyfeyn."""
+
+
 pions_dict = {
 "gp" : "\Pgp", # pion
 "gppm" : "\Pgppm", "gpmp" : "\Pgpmp", # charged pion
