@@ -1,4 +1,5 @@
 from pyfeyn import *
+from pyfeyn.user import *
 from pyx import color
 
 fd = FeynDiagram()
